# spbu_sem4_DT

./: LICENSE  README.md  pyproject.toml
ml_spbu/homework_1/: titanic_eda.ipynb  titanic_vda.ipynb
ml_spbu/homework_1/VDA/: titanic_vda.ipynb
